# linearmath

./: CMakeLists.txt  README.md
.cache/clangd/index/: gmock-actions.h.A145BCF8A586FB74.idx  gmock-all.cc.A9B04842D939F06D.idx  gmock-cardinalities.cc.376F2518F9493192.idx  gmock-cardinalities.h.49DA4B0207BE76D5.idx  gmock-function-mocker.h.D52420C764EFB289.idx  gmock-generated-actions.h.0AAB2C627E624BE4.idx  gmock-internal-utils.cc.63F4CFC2D36B7CDA.idx  gmock-internal-utils.h.3EE38F183298AC4C.idx  gmock-matchers.cc.E5622979BEA6CFEE.idx  gmock-matchers.h.924A2F0722FAA2A1.idx  gmock-matchers.h.A8CFCB2FDF043830.idx  gmock-more-actions.h.B986562F216430C9.idx  gmock-more-matchers.h.382E56070C352BC4.idx  gmock-nice-strict.h.AE14E9C4A13BDADD.idx  gmock-port.h.36894D02B15F0B9E.idx  gmock-port.h.C67B480D62538F9B.idx  gmock-pp.h.90C812C6062401A6.idx  gmock-spec-builders.cc.3509F6F9367CE805.idx  gmock-spec-builders.h.A10FF7F7C143A478.idx  gmock.cc.1474EAF630F8EE53.idx  gmock.h.548C410247C1D3B3.idx  gmock_main.cc.A3BD25BA6A68E1A2.idx  (+42 more)
include/: class_forward_declaration.hpp  col_vector_functions.hpp  col_vector_ops.hpp  column_vector.hpp  column_vector_functions.hpp  column_vector_operators.hpp  graphics_functions.hpp  matrix.h  matrix.hpp  matrix_functions.hpp  matrix_operators.hpp  matrix_ops.hpp  row_vector.hpp  row_vector_functions.hpp  row_vector_operators.hpp  row_vector_ops.hpp  vector_functions.hpp  vector_ops.hpp
src/: main.cpp
tests/: CMakeLists.txt  col_vector_basic.cpp  matrix_basic.cpp  row_vector_basic.cpp  unfiled.cpp  vector_basic.cpp
